 - ARM7: Fix sign of unaligned LDRSH
 - GBA: Fix warnings when creating and loading savestates
 - GBA Memory: Fix DMAs triggering two cycles early
 - GBA Hardware: Fix GPIO on big endian
 - Util: Fix excessive memory allocation when decoding a PNG
 - GBA: Fix Iridion II savetype
 - Libretro: Fix aspect ratio
 - Qt: Fix some potential crashes with the gamepad mapping
Misc:
 - Qt: Window size command line options are now supported
 - Qt: Increase usability of key mapper
 - GBA Memory: Use a dynamically sized mask for ROM memory
 - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
 - SDL: Support fullscreen in SDL 1.2
 - Libretro: Use anonymous memory mappers for large blocks of memory
 - Qt: Add 'Apply' button to settings window
 - GBA Video: Remove lastHblank, as it is implied
 - GBA Config: Add "override" layer for better one-time configuration
 - SDL: Allow GBASDLAudio to be used without a thread context
 - All: Improved PowerPC support
 - All: Fix some undefined behavior warnings
 - Util: Use VFile for configuration
 - GBA Memory: Implement several unimplemented memory access types
 - GBA: Implement bad I/O register loading
 - GBA Memory: Add GBAView* functions for viewing memory directly without bus issues
 - Util: Add MutexTryLock
 - Qt: Gray out "Skip BIOS intro" while "Use BIOS file" is unchecked
 - Qt: Allow use of modifier keys as input
 - Qt: Optimize log viewer
 - GBA RR: Starting from savestate now embeds the savegame
 - Libretro: Add install target for libretro core
 - 3DS: Update to new ctrulib API
 - GBA RR: Add preliminary SRAM support for VBM loading
 - GBA RR: Add support for resets in movies
 - GBA Input: Consolidate GBA_KEY_NONE and GBA_NO_MAPPING

0.3.2: (2015-12-16)
Bugfixes:
 - ARM7: Fix STRT/STRBT
 - ARM7: Implement undefined STRH/LDRH/LDRSH/LDRSB versions
 - ARM7: Fix bank switching with LDR[B]T/STR[B]T
 - Libretro: Fix problems with rumble not turning off